# pyclaw

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  HANDOFF_HOST_SSH_OPS.md  README.md  claw-saas-mysql-values-k3s.example.yaml  claw-saas-values-k3s.example.yaml  known_hosts  pyclaw-api-ingressqueue-mysql-values-k3s.yaml  pyclaw-mysql-values-k3s.example.yaml  pyclaw-mysql-values-k3s.yaml  pyclaw-values-k3s.example.yaml  pyclaw-web-values-k3s.yaml  pyclaw_host_ops_ed25519  pyclaw_host_ops_ed25519.pub  pyproject.toml  saas-claw-mysql-values-k3s.example.yaml  saas-claw-values-k3s.example.yaml  spring-values-k3s.example.yaml
.github/workflows/: build-claw-runner.yml  (+7 more)
backend/: Dockerfile  pom.xml
deploy/: docker-compose.yml
frontend/: index.html  package-lock.json  package.json
openclaw/: __main__.py  api.py  cli.py
pyclaw-web/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.js
runtime/control-plane/: Dockerfile  pyproject.toml
runtime/control-plane/app/: main.py
runtime/control-plane/app/api/: health.py
runtime/control-plane/app/config/: settings.py
sandbox-runner/: Dockerfile
spring-backend/: Dockerfile  pom.xml
tests/: __init__.py  test_agent_loop.py  test_agent_pending_approval.py  test_api.py  test_channel_platforms.py  test_channels.py  test_cli.py  test_env.py  test_guards_prompt.py  test_model_options.py  test_openai_provider.py  test_routing.py  test_sandbox_workspace_tools.py  test_session.py  test_session_ids.py  test_tool_approval.py  test_tool_catalog.py  test_tool_policy.py
(+796 files in other folders)
