[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclaw"
version = "0.1.0"
description = "OpenClaw-inspired Python agent runtime"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "pyclaw contributors" }]

[project.optional-dependencies]
openai = ["openai>=1.68.0"]

[project.scripts]
pyclaw = "openclaw.__main__:main"
openclaw = "openclaw.__main__:main"
[tool.setuptools.packages.find]
include = ["openclaw*"]
