[project]
name = "control-plane"
version = "0.1.0"
description = "Claw SaaS Runtime control plane — execution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28.0",
]

# Note: openclaw is a local package installed separately before this project.
# Install it first: pip install /path/to/runtime/openclaw

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
